--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://121.199.8.7:39043/apps/CMCCwifi.ipa</string>
+					<string>https://github.com/lvdongyang/cmccwifiRepository/raw/master/CMCCwifi.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
