--- a/manifest.plist
+++ b/manifest.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://121.199.8.7:39043/image.57x57.jpg</string>
+					<string>https://github.com/lvdongyang/cmccwifiRepository/raw/master/image57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://121.199.8.7:39043/image.512x512.jpg</string>
+					<string>https://github.com/lvdongyang/cmccwifiRepository/raw/master/image512x512.jpg</string>
 				</dict>
 			</array>
 			<key>metadata</key>
